--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,10 @@
         "commonjs": true,
         "node": true
     },
-    "extends": "prettier",
+    "extends": [
+        "prettier",
+        "plugin:prettier/recommended"
+    ],
     "plugins": [
         "prettier"
       ],
@@ -32,7 +35,7 @@
         ],
         "quotes": [
             "error",
-            "double"
+            "single"
         ],
         "semi": [
             "error",
